--- a/Task-1-AI-Chatbot/index.html
+++ b/Task-1-AI-Chatbot/index.html
@@ -1,1 +1,40 @@
-Task-1-AI-Chatbot/index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Iron Lady Lead Management</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h2>Iron Lady - Student Lead Management System</h2>
+
+<div class="form-container">
+    <input type="text" id="name" placeholder="Student Name">
+    <input type="email" id="email" placeholder="Email">
+    <input type="text" id="course" placeholder="Course Interested">
+    <select id="status">
+        <option value="New">New</option>
+        <option value="Contacted">Contacted</option>
+        <option value="Enrolled">Enrolled</option>
+    </select>
+
+    <button onclick="addStudent()">Add Student</button>
+</div>
+
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Course</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody id="studentTable"></tbody>
+</table>
+
+<script src="script.js"></script>
+</body>
+</html>
